Improve Customer Service Code (Fix Some errors)